Change title from 'Loan CRM' to 'Loan Darshak'

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Loan CRM</title>
+    <title>Loan Darshak</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
