--- a/templates/base.html
+++ b/templates/base.html
@@ -233,11 +233,18 @@
                             Profile
                         </a>
 
-                        <a href="#"
+                        <!-- <a href="#"
                            class="block px-4 py-2 hover:bg-gray-100 text-red-600">
                             Logout
-                        </a>
+                        </a> -->
 
+                        <form method="post" action="{% url 'logout' %}">
+    {% csrf_token %}
+    <button type="submit"
+            class="w-full text-left px-4 py-2 hover:bg-gray-100 text-red-600">
+        Logout
+    </button>
+</form>
                     </div>
 
                 </div>
